# MusicPlayer

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowRes.qrc
debug/: CMakeCache.txt  Makefile  cmake_install.cmake
debug/.qt/: QtDeploySupport.cmake
debug/MusicPlayer_autogen/: moc_predefs.h
debug/MusicPlayer_autogen/include/: ui_mainwindow.h
release/: CMakeCache.txt  Makefile  cmake_install.cmake
release/.qt/: QtDeploySupport.cmake
release/MusicPlayer_autogen/EWIEGA46WW/: qrc_mainwindowRes.cpp
